Added UseCompactObjectHeaders to GraalVM buildArgs